--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -46,12 +46,13 @@ layout: default
         </i></small>
       </div>
 
+<!--
       <div class="read-time">
         <small>
           {{ minutes }} minute read
         </small>
       </div>
-
+-->
       <div class="content-panel content">
 
         {% if page.series %}
@@ -105,17 +106,18 @@ layout: default
       {% if site.twitter_username and site.disqus_account %}
       <div class="content-panel feedback">
         I <i class="fa fa-heart"></i> feedback.<br />
-        Let me know what you think of this article on twitter <a href="http://www.twitter.com/{{ site.twitter_username }}">@{{ site.twitter_username }}</a> or leave a comment below!
+        Let me know what you think of this article in the comment~~~
       </div>
       {% elsif site.twitter_username %}
       <div class="content-panel feedback">
         I <i class="fa fa-heart"></i> feedback.<br />
-        Let me know what you think of this article on twitter <a href="http://www.twitter.com/{{ site.twitter_username }}">@{{ site.twitter_username }}</a>!
+        Let me know what you think of this article in the comment~~~
       </div>
       {% elsif site.disqus_account %}
+
       <div class="content-panel feedback">
         I <i class="fa fa-heart"></i> feedback.<br />
-        Let me know what you think of this article in the comment section below!
+        Let me know what you think of this article in the comment~~~
       </div>
       {% endif %}
 
